--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <link href="/dist/output.css" rel="stylesheet">
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body class="bg-ice-white dark:bg-dark-black">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
